fix non clickable button behind animated duplicate flying key

--- a/style.css
+++ b/style.css
@@ -91,6 +91,8 @@ body {
     color: black;
     position: absolute;
     animation: keyanimation 0.4s ease-in-out;
+    cursor: default;
+    pointer-events: none;
 }
 
 @keyframes keyanimation {
